--- a/index.html
+++ b/index.html
@@ -234,5 +234,6 @@
       </section>
     </template>
     <script src="js/main.js" type="module"></script>
+    <script src="js/render_preview.js" type="module"></script>
 </body>
 </html>
